--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "strict": false
   },
   "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "src/components/ui/**/*"]
 }
